--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 	</head>
 	<body>
 		<main class="container-fluid no-padding">
-			<div class="container-lg">
+			<section class="container-lg">
 				<nav class="row align-items-center justify-content-between" id="Home">
-					<div class="col-2">
+					<div class="col-xs-7 col-lg-2">
 						<h1>
 							<img
 								class="logo"
@@ -21,7 +21,7 @@
 							/>
 						</h1>
 					</div>
-					<div class="col-4 justify-content-center nav-list">
+					<div class="col-xs-12 col-lg-4 justify-content-center nav-list">
 						<ul class="list-unstyled d-flex">
 							<li>Home</li>
 							<li>About Us</li>
@@ -30,12 +30,12 @@
 						</ul>
 					</div>
 				</nav>
-			</div>
+			</section>
 			<section id="carousel" class="row w-100">
 				<div
 					id="carouselMain"
 					class="carousel slide no-padding"
-					data-bs-ride="carousel"
+					data-bs-ride="false"
 				>
 					<div class="carousel-indicators">
 						<button
@@ -132,19 +132,84 @@
 					</button>
 				</div>
 			</section>
-			<div class="container-lg">
-				<div class="row justify-content-between">
-					<div class="col-12 col-md-4 position-relative">
-						<img src="./assets/desktop/Group 151.png " />
+			<section
+				class="container-lg no-padding rectangle-section"
+				id="rectangle-section"
+			>
+				<div class="row rect-row">
+					<div class="col-md-6 col-lg-4">
+						<div class="rectangle-1">
+							<div class="rectangle-cap d-flex align-items-center flex-column">
+								<h5>Generate a domain</h5>
+								<h6>Use a computer</h6>
+								<button>$60/M</button>
+							</div>
+						</div>
 					</div>
-					<div class="col-12 col-md-4 position-relative">
-						<img src="./assets/desktop/Group 152.png" />
+					<div class="col-md-5 col-lg-4">
+						<div class="rectangle-2">
+							<div class="rectangle-cap d-flex align-items-center flex-column">
+								<h5>Generate a domain</h5>
+								<h6>Use a computer</h6>
+								<button>$60/M</button>
+							</div>
+						</div>
 					</div>
-					<div class="col-12 col-md-4 position-relative">
-						<img src="./assets/desktop/Group 153.png" />
+					<div class="col-md-6 col-lg-4">
+						<div class="rectangle-3">
+							<div class="rectangle-cap d-flex align-items-center flex-column">
+								<h5>Generate a domain</h5>
+								<h6>Use a computer</h6>
+								<button>$60/M</button>
+							</div>
+						</div>
 					</div>
 				</div>
-			</div>
+			</section>
+			<section class="container-lg" id="about-us">
+				<div class="row d-flex flex-column flex-md-row justify-content-between">
+					<div class="col-lg-7">
+						<div class="d-flex flex-column">
+							<h5>ABOUT US</h5>
+							<hr class="line" />
+							<h2>WELCOME TO SAVYEVER</h2>
+
+							<article class="about-article">
+								<h4>NAMES THAT CREATE BRAND PREFERENCE</h4>
+								<p>
+									Αfter all, if a business name lacks workable qualities, why
+									would you use it? Why would customers want it? A good business
+									name should stand on its own strength and give your endeavor
+									momentum
+								</p>
+								<p>
+									The business names found with SAVYEVER business domain name
+									generator are guaranteed to make an impression on your target
+									audience and make them want to come back to your website every
+									time.
+								</p>
+								<p>
+									This is called brand preference. Think of some of your
+									favorite websites and ask yourself, are their names
+									indistinguishable from their business? That's the sign of a
+									job well done.
+								</p>
+							</article>
+						</div>
+					</div>
+					<div class="col-lg-4">
+						<aside
+							class="about-images d-flex flex-column justify-content-between"
+						>
+							<img
+								src="./assets/desktop/Mask Group 18.png"
+								alt="wifi router blue"
+							/>
+							<img src="./assets/desktop/Mask Group 6.png" alt="cable" />
+						</aside>
+					</div>
+				</div>
+			</section>
 		</main>
 		<script src="./node_modules/bootstrap/dist/js/bootstrap.js"></script>
 	</body>
