made about us and classes section for desktop, still need to work on mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-5 col-lg-4">
+					<div class="col-md-6 col-lg-4">
 						<div class="rectangle-2">
 							<div class="rectangle-cap d-flex align-items-center flex-column">
 								<h5>Generate a domain</h5>
@@ -168,13 +168,16 @@
 			</section>
 			<section class="container-lg" id="about-us">
 				<div class="row d-flex flex-column flex-md-row justify-content-between">
-					<div class="col-lg-7">
-						<div class="d-flex flex-column">
+					<div class="col-lg-7 article-wrapper">
+						<div class="d-flex flex-column about-article">
 							<h5>ABOUT US</h5>
-							<hr class="line" />
-							<h2>WELCOME TO SAVYEVER</h2>
 
-							<article class="about-article">
+							<h2>Welcome to SAVYEVER</h2>
+							<hr class="line-hor" />
+
+							<article
+								class="justify-content-around d-flex flex-column text-sm-center text-lg-start"
+							>
 								<h4>NAMES THAT CREATE BRAND PREFERENCE</h4>
 								<p>
 									Αfter all, if a business name lacks workable qualities, why
@@ -196,8 +199,9 @@
 								</p>
 							</article>
 						</div>
+						<button>Read More</button>
 					</div>
-					<div class="col-lg-4">
+					<div class="col-lg-4 about-sidebar">
 						<aside
 							class="about-images d-flex flex-column justify-content-between"
 						>
@@ -207,6 +211,47 @@
 							/>
 							<img src="./assets/desktop/Mask Group 6.png" alt="cable" />
 						</aside>
+					</div>
+				</div>
+			</section>
+			<section class="classes" id="classes">
+				<header
+					class="d-flex flex-column justify-content-center align-items-center"
+				>
+					<h3>Our Classes</h3>
+					<hr />
+					<p>
+						They have been highlighted on our site because of their brandable
+						qualities, which will make an impression on the audience you're
+						trying to reach.
+					</p>
+				</header>
+				<div class="d-flex w-100 justify-content-between class-rectangle">
+					<div class="w-50">
+						<img
+							class="w-100 img-fluid"
+							src="./assets/desktop/Mask Group 7.png"
+						/>
+					</div>
+					<div class="w-50">
+						<img
+							class="w-100 img-fluid"
+							src="./assets/desktop/Mask Group 8.png"
+						/>
+					</div>
+				</div>
+				<div class="d-flex w-100 justify-content-between class-rectangle">
+					<div class="w-50">
+						<img
+							class="w-100 img-fluid"
+							src="./assets/desktop/Mask Group 9.png"
+						/>
+					</div>
+					<div class="w-50">
+						<img
+							class="w-100 img-fluid"
+							src="./assets/desktop/Mask Group 10.png"
+						/>
 					</div>
 				</div>
 			</section>
