finetuned FAQ css

--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
 			>
 				<h5>Faq's</h5>
 				<hr class="line-orange" />
-				<div w-100>
+				<div class="w-100 d-flex flex-column align-items-between">
 					<div class="accordion accordion-flush" id="accordionFlushExample">
 						<div class="accordion-item">
 							<h2 class="accordion-header" id="flush-headingOne">
