--- a/index.html
+++ b/index.html
@@ -84,6 +84,15 @@
 								class="d-block w-100 carousel-custom"
 								alt="..."
 							/>
+							<div class="carousel-cap">
+								<h5 class="carousel-head text-nowrap col-3">
+									BUYING A DOMAIN NAME
+								</h5>
+								<p class="carousel-par col-9">
+									Each name comes with the .Com Address
+								</p>
+								<button class="btn-carousel col-3">Get Started #2</button>
+							</div>
 						</div>
 						<div class="carousel-item">
 							<img
@@ -91,6 +100,15 @@
 								class="d-block w-100 carousel-custom"
 								alt="..."
 							/>
+							<div class="carousel-cap">
+								<h5 class="carousel-head text-nowrap col-3">
+									BUYING A DOMAIN NAME
+								</h5>
+								<p class="carousel-par col-9">
+									Each name comes with the .Com Address
+								</p>
+								<button class="btn-carousel col-3">Get Started #3</button>
+							</div>
 						</div>
 					</div>
 					<button
@@ -114,8 +132,8 @@
 				</div>
 			</section>
 			<section
-				class="container-xl no-padding rectangle-section"
 				id="rectangle-section"
+				class="container-xl no-padding rectangle-section"
 			>
 				<div class="row rect-row d-flex justify-content-around">
 					<div class="col-md-6 col-lg-4 no-padding">
@@ -130,24 +148,24 @@
 					<div class="col-md-6 col-lg-4 no-padding">
 						<div class="rectangle-2">
 							<div class="rectangle-cap d-flex align-items-center flex-column">
-								<h5>Generate a domain</h5>
-								<h6>Use a computer</h6>
-								<button>$60/M</button>
+								<h5>Carefully selected domain</h5>
+								<h6>for each business</h6>
+								<button>$120/M</button>
 							</div>
 						</div>
 					</div>
 					<div class="col-md-6 col-lg-4 no-padding">
 						<div class="rectangle-3">
 							<div class="rectangle-cap d-flex align-items-center flex-column">
-								<h5>Generate a domain</h5>
-								<h6>Use a computer</h6>
-								<button>$60/M</button>
+								<h5>Unique business domain</h5>
+								<h6>made for you</h6>
+								<button>$200/M</button>
 							</div>
 						</div>
 					</div>
 				</div>
 			</section>
-			<section class="container-xl" id="about-us">
+			<section id="about-us" class="container-xl">
 				<div class="row d-flex flex-column flex-md-row">
 					<div class="col-lg-7 article-wrapper">
 						<div
@@ -202,7 +220,7 @@
 					</div>
 				</div>
 			</section>
-			<section class="classes container-fluid" id="classes">
+			<section id="classes" class="classes container-fluid no-padding">
 				<header
 					class="d-flex flex-column justify-content-center align-items-center"
 				>
@@ -216,20 +234,20 @@
 				</header>
 				<div class="row class-rectangle">
 					<div class="class-rect-1 col-lg-6 d-flex flex-column-reverse">
-						<div class="rect-cap-dark">Effective names</div>
+						<div class="rect-cap-dark"><h5>Effective names</h5></div>
 					</div>
 
 					<div class="class-rect-2 col-lg-6 d-flex flex-column-reverse">
-						<div class="rect-cap-light">Industry finest</div>
+						<div class="rect-cap-light"><h5>Industry Finest</h5></div>
 					</div>
 				</div>
 				<div class="row class-rectangle">
 					<div class="class-rect-3 col-lg-6 d-flex flex-column-reverse">
-						<div class="rect-cap-dark">Popular domains</div>
+						<div class="rect-cap-dark"><h5>Popular domains</h5></div>
 					</div>
 
 					<div class="class-rect-4 col-lg-6 d-flex flex-column-reverse">
-						<div class="rect-cap-light">Short domains</div>
+						<div class="rect-cap-light"><h5>Short domains</h5></div>
 					</div>
 				</div>
 			</section>
@@ -316,7 +334,7 @@
 			>
 				<h5>Faq's</h5>
 				<hr class="line-orange" />
-				<div class="w-100 d-flex flex-column align-items-between">
+				<div class="w-100">
 					<div class="accordion accordion-flush" id="accordionFlushExample">
 						<div class="accordion-item">
 							<h2 class="accordion-header" id="flush-headingOne">
@@ -328,7 +346,7 @@
 									aria-expanded="false"
 									aria-controls="flush-collapseOne"
 								>
-									Accordion Item #1
+									Purchasing A Name
 								</button>
 							</h2>
 							<div
@@ -338,9 +356,11 @@
 								data-bs-parent="#accordionFlushExample"
 							>
 								<div class="accordion-body">
-									Placeholder content for this accordion, which is intended to
-									demonstrate the <code>.accordion-flush</code> class. This is
-									the first item's accordion body.
+									When you see a domain you like, simply select the name, then
+									hit the “Buy Now button. This will take you to a checkout
+									screen powered by one of our partner premium domain
+									marketplaces, where you can enter your personal info/payment
+									information and purchase a name.
 								</div>
 							</div>
 						</div>
@@ -354,7 +374,7 @@
 									aria-expanded="false"
 									aria-controls="flush-collapseTwo"
 								>
-									Accordion Item #2
+									What Is A Business
 								</button>
 							</h2>
 							<div
@@ -364,10 +384,11 @@
 								data-bs-parent="#accordionFlushExample"
 							>
 								<div class="accordion-body">
-									Placeholder content for this accordion, which is intended to
-									demonstrate the <code>.accordion-flush</code> class. This is
-									the second item's accordion body. Let's imagine this being
-									filled with some actual content.
+									When you see a domain you like, simply select the name, then
+									hit the “Buy Now button. This will take you to a checkout
+									screen powered by one of our partner premium domain
+									marketplaces, where you can enter your personal info/payment
+									information and purchase a name.
 								</div>
 							</div>
 						</div>
@@ -381,7 +402,7 @@
 									aria-expanded="false"
 									aria-controls="flush-collapseThree"
 								>
-									Accordion Item #3
+									Premium Name Guide
 								</button>
 							</h2>
 							<div
@@ -391,19 +412,47 @@
 								data-bs-parent="#accordionFlushExample"
 							>
 								<div class="accordion-body">
-									Placeholder content for this accordion, which is intended to
-									demonstrate the <code>.accordion-flush</code> class. This is
-									the third item's accordion body. Nothing more exciting
-									happening here in terms of content, but just filling up the
-									space to make it look, at least at first glance, a bit more
-									representative of how this would look in a real-world
-									application.
+									When you see a domain you like, simply select the name, then
+									hit the “Buy Now button. This will take you to a checkout
+									screen powered by one of our partner premium domain
+									marketplaces, where you can enter your personal info/payment
+									information and purchase a name.
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 			</section>
+			<footer class="container-fluid no-padding footer">
+				<div class="row d-flex justify-content-md-around">
+					<div class="col-md-2 logo">
+						<img src="./assets/desktop/Group 159.png" />
+					</div>
+					<div class="col-md-2 link-list">
+						<ul class="d-flex list-unstyled test">
+							<li>
+								<a href="https://facebook.com" target="_blank">
+									<img src="assets/desktop/Group 164.png" />
+								</a>
+							</li>
+							<li>
+								<a href="https://linkedin.com" target="_blank">
+									<img src="assets/desktop/Group 163.png" />
+								</a>
+							</li>
+							<li>
+								<a href="https://twitter.com" target="_blank">
+									<img src="assets/desktop/Group 162.png" />
+								</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+				<div class="row orange-space no-padding"></div>
+				<div class="row copyright d-flex justify-content-center">
+					©2022 Proudly Made by Us!
+				</div>
+			</footer>
 		</main>
 		<script src="./node_modules/bootstrap/dist/js/bootstrap.js"></script>
 	</body>
