--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<title>SAVYEVER demo</title>
 		<link rel="stylesheet" href="/css/style.css" />
 		<link rel="stylesheet" href="https://use.typekit.net/rfb8yzk.css" />
 		<script src="./javascript/script.js" defer></script>
